# notice-take

./: .gitignore  README.md
backend/NOTICE_TAKE/: .gitignore  README.md  app.py  pyproject.toml
backend/NOTICE_TAKE/config/: env.example.json  prompt_events_parse.txt  server.json
backend/NOTICE_TAKE/notice_take/: app.py  config.py  logging_utils.py  utils.py
backend/NOTICE_TAKE/notice_take/services/: __init__.py  firebase.py  hms.py
frontend/flutter_application_0103/: .gitignore  README.md  pubspec.yaml
frontend/flutter_application_0103/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
frontend/flutter_application_0103/android/app/: agconnect-services.json  build.gradle.kts
frontend/flutter_application_0103/ios/Runner/: AppDelegate.swift  Info.plist
frontend/flutter_application_0103/lib/: main.dart
frontend/flutter_application_0103/lib/config/: asr_config.dart
frontend/flutter_application_0103/lib/models/: parsed_event.dart
frontend/flutter_application_0103/lib/services/: event_parse_service.dart  local_asr_service.dart  local_notification_service.dart  notification_permission_service.dart
frontend/flutter_application_0103/lib/ui/: event_list_page.dart  event_page.dart  note_home_page.dart  recognition_page.dart  shared_widgets.dart
frontend/flutter_application_0103/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frontend/flutter_application_0103/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/flutter_application_0103/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+2 files in other folders)
