[project]
name = "notice-take"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dashscope>=1.25.5",
    "fastapi>=0.128.0",
    "firebase-admin>=6.5.0",
    "openai>=1.45.0",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
